# volcengine-cpp-sdk

./: CMakeLists.txt  NOTICE.txt  README.MD  install.sh  meta.json
volcengine-cpp-sdk-cen/: CMakeLists.txt
volcengine-cpp-sdk-cen/include/volcengine/cen/: CenClient.h
volcengine-cpp-sdk-cen/src/: CenClient.cpp
volcengine-cpp-sdk-cen/src/model/cen/: AssociateCenBandwidthPackageRequest.cpp  AssociateCenBandwidthPackageResult.cpp  AttachInstanceToCenRequest.cpp  AttachInstanceToCenResult.cpp  AttachedInstanceForDescribeCenAttachedInstancesOutput.cpp  CenBandwidthPackageForDescribeCenBandwidthPackagesOutput.cpp  CenForDescribeCensOutput.cpp  CenGrantRuleForDescribeGrantRulesToCenOutput.cpp  CenGrantRuleForDescribeInstanceGrantedRulesOutput.cpp  CenRouteEntryForDescribeCenRouteEntriesOutput.cpp  CenSummaryRouteEntryForDescribeCenSummaryRouteEntriesOutput.cpp  CreateCenBandwidthPackageRequest.cpp  CreateCenBandwidthPackageResult.cpp  CreateCenInterRegionBandwidthRequest.cpp  CreateCenInterRegionBandwidthResult.cpp  CreateCenRequest.cpp  CreateCenResult.cpp  CreateCenServiceRouteEntryRequest.cpp  CreateCenServiceRouteEntryResult.cpp  CreateCenSummaryRouteEntryRequest.cpp  CreateCenSummaryRouteEntryResult.cpp  DeleteCenBandwidthPackageRequest.cpp  DeleteCenBandwidthPackageResult.cpp  DeleteCenInterRegionBandwidthRequest.cpp  DeleteCenInterRegionBandwidthResult.cpp  DeleteCenRequest.cpp  DeleteCenResult.cpp  DeleteCenSummaryRouteEntryRequest.cpp  DeleteCenSummaryRouteEntryResult.cpp  DescribeCenAttachedInstanceAttributesRequest.cpp  DescribeCenAttachedInstanceAttributesResult.cpp  DescribeCenAttachedInstancesRequest.cpp  DescribeCenAttachedInstancesResult.cpp  DescribeCenAttributesRequest.cpp  DescribeCenAttributesResult.cpp  DescribeCenBandwidthPackageAttributesRequest.cpp  DescribeCenBandwidthPackageAttributesResult.cpp  DescribeCenBandwidthPackagesRequest.cpp  DescribeCenBandwidthPackagesResult.cpp  DescribeCenInterRegionBandwidthAttributesRequest.cpp  (+45 more)
volcengine-cpp-sdk-clb/: CMakeLists.txt
volcengine-cpp-sdk-clb/include/volcengine/clb/: ClbClient.h
volcengine-cpp-sdk-clb/src/: ClbClient.cpp
volcengine-cpp-sdk-clb/src/model/clb/: AccessLogForDescribeLoadBalancerAttributesOutput.cpp  AclEntryForAddAclEntriesInput.cpp  AclEntryForDescribeAclAttributesOutput.cpp  AclForDescribeAclsOutput.cpp  AddAclEntriesRequest.cpp  AddAclEntriesResult.cpp  AddServerGroupBackendServersRequest.cpp  AddServerGroupBackendServersResult.cpp  AttachHealthCheckLogTopicRequest.cpp  AttachHealthCheckLogTopicResult.cpp  CertificateForDescribeCertificatesOutput.cpp  ConvertLoadBalancerBillingTypeRequest.cpp  ConvertLoadBalancerBillingTypeResult.cpp  CreateAclRequest.cpp  CreateAclResult.cpp  CreateHealthCheckLogProjectRequest.cpp  CreateHealthCheckLogProjectResult.cpp  CreateListenerRequest.cpp  CreateListenerResult.cpp  CreateLoadBalancerRequest.cpp  CreateLoadBalancerResult.cpp  CreateRulesRequest.cpp  CreateRulesResult.cpp  CreateServerGroupRequest.cpp  CreateServerGroupResult.cpp  DeleteAclRequest.cpp  DeleteAclResult.cpp  DeleteCertificateRequest.cpp  DeleteCertificateResult.cpp  DeleteHealthCheckLogProjectRequest.cpp  DeleteHealthCheckLogProjectResult.cpp  DeleteListenerRequest.cpp  DeleteListenerResult.cpp  DeleteLoadBalancerRequest.cpp  DeleteLoadBalancerResult.cpp  DeleteRulesRequest.cpp  DeleteRulesResult.cpp  DeleteServerGroupRequest.cpp  DeleteServerGroupResult.cpp  DescribeAclAttributesRequest.cpp  (+98 more)
volcengine-cpp-sdk-core/: CMakeLists.txt
volcengine-cpp-sdk-core/include/volcengine/core/: RequestBuilder.h  ResultData.h  Version.h  Volcengine.h  VolcengineClient.h  VolcengineClientConfig.h  VolcengineError.h  VolcengineMetadata.h  VolcengineRequest.h  VolcengineResponse.h
volcengine-cpp-sdk-core/src/: RequestBuilder.cpp  Volcengine.cpp  VolcengineClient.cpp  VolcengineMetadata.cpp  VolcengineRequest.cpp
volcengine-cpp-sdk-core/src/auth/: StaticCredentialsProvider.cpp  VolcengineAuthSigner.cpp
volcengine-cpp-sdk-core/src/transport/: DefaultTransport.cpp  Transport.cpp  TransportConfig.cpp
volcengine-cpp-sdk-core/src/transport/http/: HttpClient.cpp  HttpRequest.cpp  HttpResponse.cpp  Url.cpp
volcengine-cpp-sdk-core/src/utils/: CryptoUtils.cpp  MapUtils.cpp  StringUtils.cpp
volcengine-cpp-sdk-directconnect/: CMakeLists.txt
volcengine-cpp-sdk-directconnect/include/volcengine/directconnect/: DirectconnectClient.h
volcengine-cpp-sdk-directconnect/src/: DirectconnectClient.cpp
volcengine-cpp-sdk-directconnect/src/model/directconnect/: AssociateCenForDescribeDirectConnectGatewayAttributesOutput.cpp  AssociateCenForDescribeDirectConnectGatewaysOutput.cpp  BgpPeerForDescribeBgpPeersOutput.cpp  CreateBgpPeerRequest.cpp  CreateBgpPeerResult.cpp  CreateDirectConnectConnectionOrderRequest.cpp  CreateDirectConnectConnectionOrderResult.cpp  CreateDirectConnectConnectionRequest.cpp  CreateDirectConnectConnectionResult.cpp  CreateDirectConnectGatewayRequest.cpp  CreateDirectConnectGatewayResult.cpp  CreateDirectConnectGatewayRouteRequest.cpp  CreateDirectConnectGatewayRouteResult.cpp  CreateDirectConnectVirtualInterfaceRequest.cpp  CreateDirectConnectVirtualInterfaceResult.cpp  DeleteBgpPeerRequest.cpp  DeleteBgpPeerResult.cpp  DeleteDirectConnectConnectionRequest.cpp  DeleteDirectConnectConnectionResult.cpp  DeleteDirectConnectGatewayRequest.cpp  DeleteDirectConnectGatewayResult.cpp  DeleteDirectConnectGatewayRouteRequest.cpp  DeleteDirectConnectGatewayRouteResult.cpp  DeleteDirectConnectVirtualInterfaceRequest.cpp  (+48 more)
volcengine-cpp-sdk-ecs/: CMakeLists.txt
volcengine-cpp-sdk-ecs/src/: EcsClient.cpp
volcengine-cpp-sdk-natgateway/: CMakeLists.txt
volcengine-cpp-sdk-natgateway/src/: NatgatewayClient.cpp
volcengine-cpp-sdk-storageebs/: CMakeLists.txt
volcengine-cpp-sdk-storageebs/src/: StorageebsClient.cpp
volcengine-cpp-sdk-vke/: .gitignore  CMakeLists.txt
volcengine-cpp-sdk-vke/src/: VkeClient.cpp
volcengine-cpp-sdk-vpc/: CMakeLists.txt
volcengine-cpp-sdk-vpc/src/: VpcClient.cpp
volcengine-cpp-sdk-vpn/: CMakeLists.txt
volcengine-cpp-sdk-vpn/src/: VpnClient.cpp
(+1688 files in other folders)
